# Make-Plan

./: README.md  pyproject.toml  timetable.csv
src/make_plan/: app.py  data.py  logic.py  main.py  scheduler.py
